Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberIntObjField.quorum
class Main
    Integer i
    number num = 0.0
    action Main
        i:SetValue(5)
        num = cast(number, i)
        if num = 5.0
            output "passed"
        end
    end
end