Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjIntObjField.quorum
class main
    Integer i
    Text txt
    action Main
        i:SetValue(5)
        txt = cast(Text, i)
    end
end